--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
 
 .btn {
-  @apply w-64 rounded-md bg-indigo-600 p-2 font-semibold text-white hover:bg-indigo-700;
+  @apply w-64 rounded-md bg-indigo-600 p-2 font-semibold text-white hover:bg-indigo-700 duration-200;
 }
