--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import 'tailwindcss';
-
-.quicksand {
-  font-family: 'Quicksand', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.open-sans {
-  font-family: 'Open Sans', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: 'wdth' 100;
+@theme {
+  --open-sans: 'Open Sans', sans-serif;
+  --default-font-family: 'Open Sans', var(--font-sans);
 }
 
 .btn {
-  @apply w-64 cursor-pointer rounded-md bg-indigo-600 p-2 font-bold text-white duration-200 hover:bg-indigo-700;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: 'wdth' 100;
+  @apply w-64 cursor-pointer rounded-md bg-indigo-600 p-2 text-lg font-semibold text-white duration-200 hover:bg-indigo-700;
 }
