--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
 }
 
 .btn {
-  @apply w-64 cursor-pointer rounded-md bg-indigo-600 p-2 text-lg font-semibold text-white duration-200 hover:bg-indigo-700;
+  @apply w-64 cursor-pointer rounded-md bg-indigo-600 p-2 text-lg font-semibold text-white shadow-md duration-200 hover:bg-indigo-700;
 }
